2014-05-14         Arnold D. Robbins     <arnold@skeeve.com>

	* custom.h (_GL_PURE): Move definition to here. Sigh.
	* dfa.h, dfa.c: Sync with GNU grep. Sigh.

2014-05-11         Arnold D. Robbins     <arnold@skeeve.com>

	* debug.c (do_eval): Repair fix of 2014-05-09 and use
	assoc_remove to take @eval out of the function table.
	* symbol.c: Fix a comment.  This file needs some work.

2014-05-10         Arnold D. Robbins     <arnold@skeeve.com>

	* io.c (get_a_record): Finish TERMNEAREND handling in case
	we don't have a regular file but aren't going to get more data.
	Added some additional comments.

2014-05-09         Arnold D. Robbins     <arnold@skeeve.com>

	* debug.c (do_eval): Don't free `f' which points into the context
	that was previously freed. Bug reported by Jan Chaloupka
	<jchaloup@redhat.com>.  Apparently introduced with move to
	SYMTAB and FUNCTAB, but only showed up on Fedora 20 and Ubuntu 14.04,
	which have a newer glibc.
	(do_eval): Fix a memory leak seen by valgrind on Fedora 20 and
	Ubuntu 14.04: the new SRCFILE that is added wasn't released.

	Unrelated:

	* io.c (get_a_record): Handle return of TERMNEAREND when the
	entire file has been read into the buffer and we're using a
	regex for RS. Bug report by Grail Dane <grail69@hotmail.com>.

2014-05-04         Arnold D. Robbins     <arnold@skeeve.com>

	* debug.c (debug_prog): Change check for GAWK_RESTART so that it
	actually works. Bug fix: run command in debugger would start
	over again but not actually start running the program.

2014-04-25         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* io.c (two_way_open): In forked child, reset SIGPIPE to SIG_DFL.
	Fixes problems with "broken pipe" errors from child processes,
	restoring 4.1.0 and earlier behavior. Thanks to Daryl F
	<wyatt@prairieturtle.ca> for the report.
	(gawk_popen): Ditto.

2014-04-25         Arnold D. Robbins     <arnold@skeeve.com>

	* dfa.h, dfa.c: Merge with GNU grep; lots of forward motion.
