@@ -3,6 +3,11 @@
 	* custom.h (_GL_PURE): Move definition to here. Sigh.
 	* dfa.h, dfa.c: Sync with GNU grep. Sigh.
 
+	Unrelated:
+
+	* custom.h: Remove stuff for Ultrix 4.3. No one has such
+	systems anymore; this just got missed earlier.
+
 2014-05-11         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* debug.c (do_eval): Repair fix of 2014-05-09 and use
